<resources>
    <string name="app_name">Tesseract4</string>
    <string name="output">Output</string>
    <string name="start">Start</string>
    <string name="timer">Timer:</string>
    <string name="characters">Characters</string>
    <string name="words">Words</string>
    <string name="text_lines">Text Lines</string>
    <string name="regions">Regions</string>
    <string name="text_recognition">Text recognition</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="hocr_info">hOCR info</string>
    <string name="mode">Mode:</string>
</resources>
